src_old/objects/LocationAssignment__c.object
<CustomObject>
    <description>Location Assignment specifies the Execution Company for a Project Type at a specific Location. The Location Assignment is required to assign Jobs to an Execution Company for a Location. Location Assignment is related to Location, Account, and Project Type.</description>
    <fields>
        <fullName>AccountableExecutionCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accountable Execution Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ExecutionCompany</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Location Assignments</relationshipLabel>
        <relationshipName>Location_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <formula>Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Location Assignments</relationshipLabel>
        <relationshipName>LocationAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProjectType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Type</label>
        <referenceTo>ProjectType__c</referenceTo>
        <relationshipLabel>Location Assignments</relationshipLabel>
        <relationshipName>LocationAssignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Location Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>ProjectType__c</columns>
        <columns>AccountableExecutionCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>